src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Probablity__c</fullName>
        <label>Conversion Probablity</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Conversion_Probablity__c</fullName>
        <label>Customer Conversion Probablity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__CommercialCreditScore__c</fullName>
        <label>D&amp;B Delinquency Class (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Commercial_Credit_Score_Class__c</fullName>
        <label>D&amp;B Delinquency Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Commercial_Credit_Score_Percentiles__c</fullName>
        <label>D&amp;B Delinquency Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Address__c</fullName>
        <label>D&amp;B Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Avg_High_Credit__c</fullName>
        <label>D&amp;B Avg High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_City__c</fullName>
        <label>D&amp;B City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Country__c</fullName>
        <label>D&amp;B Country/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_High_Credit__c</fullName>
        <label>D&amp;B High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_State_Province__c</fullName>
        <label>D&amp;B State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Zip_Postal_Code__c</fullName>
        <label>D&amp;B Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Created_Date__c</fullName>
        <label>Application Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_ID__c</fullName>
        <label>D&amp;B Application ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Modified_Date__c</fullName>
        <label>Application Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Company_Name__c</fullName>
        <label>D&amp;B Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Limit__c</fullName>
        <label>Recommended Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Term_Status__c</fullName>
        <label>Credit Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_DUNS_NO__c</fullName>
        <label>D&amp;B DUNS Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Early_Payment_Discount__c</fullName>
        <label>Early Payment Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Requested_Amount__c</fullName>
        <label>Credit Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Employees__c</fullName>
        <label>D&amp;B Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score_Class__c</fullName>
        <label>D&amp;B Failure Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score_Percentile__c</fullName>
        <label>D&amp;B Failure Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score__c</fullName>
        <label>D&amp;B Failure Score (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__PAYDEX__c</fullName>
        <label>D&amp;B PAYDEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Primary_NAICS__c</fullName>
        <label>D&amp;B Primary NAICS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Primary_SIC__c</fullName>
        <label>D&amp;B Primary SIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Rating__c</fullName>
        <label>D&amp;B Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Company_Profile__c</fullName>
        <label>D&amp;B Viability - Company Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Data_Depth_Indicator__c</fullName>
        <label>D&amp;B Viability - Data Depth Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Portfolio_Comparison__c</fullName>
        <label>D&amp;B Viability - Portfolio Comparison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Rating__c</fullName>
        <label>D&amp;B Viability Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Viability_Score__c</fullName>
        <label>D&amp;B Viability - Viability Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Years_in_Business__c</fullName>
        <label>D&amp;B Years in Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_DistID_Cleared__c</fullName>
        <label>AOS DistID Cleared</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_Error__c</fullName>
        <label>AOS Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_Results__c</fullName>
        <label>AOS Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_String__c</fullName>
        <label>AOS String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Add_IM_Date__c</fullName>
        <label>Address Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Add_IM_Status__c</fullName>
        <label>Address Resolution Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Address_Risk_Country_Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Address Risk Country Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Address_Screening_Date__c</fullName>
        <label>Address Screening Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Address_Screening_Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Address Screening Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Compliance_History__c</fullName>
        <label>Compliance History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Distributed_ID__c</fullName>
        <label>Distributed ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__IM_Date__c</fullName>
        <description>Incident Manager status change date</description>
        <inlineHelpText>Incident Manager status change date</inlineHelpText>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__IM_Status__c</fullName>
        <description>Incident Manager Status Value</description>
        <inlineHelpText>Incident Manager Status</inlineHelpText>
        <label>Resolution Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPSString__c</fullName>
        <label>RPSString</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Date__c</fullName>
        <description>Date/Time of last Restricted Party Screening</description>
        <inlineHelpText>Date/Time of last Restricted Party Screening</inlineHelpText>
        <label>Restricted Party Screening Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_DistID_Cleared__c</fullName>
        <label>RPS DistID Cleared</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Error__c</fullName>
        <label>RPS Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Results__c</fullName>
        <label>RPS Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_RiskCountry_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <description>Sanctioned or Embargoed Country Indicator</description>
        <inlineHelpText>Sanctioned or Embargoed Country Indicator</inlineHelpText>
        <label>Risk Country Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__RPS_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <description>Current Restricted Party Screening Status</description>
        <inlineHelpText>Current Restricted Party Screening Status</inlineHelpText>
        <label>Restricted Party Screening Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Screening_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually or Programatically trigger screening</description>
        <label>Screening Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__add_DistributedID__c</fullName>
        <label>Address Distributed IDs</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Above_Fifty_Plus_Quote_And_Zero_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created to check if customer related to lead created 50+ customer quotes but have 0 sales order</description>
        <label>Is Above Fifty Plus Quote And Zero Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Leads_50_Plus_Quotes_With_No_Order</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Above_Fifty_Plus_Quote_And_Zero_Order__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Admin</value>
        </filters>
        <label>50 Plus Quotes With No Order</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>